# seed-farmer

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  VERSION  cookiecutter.json  coverage.ini  mkdocs.yml  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check-documentation-build.yml  dependabot-prs.yml  main.yml  requirements-docs-test.yml  snyk.yml
docs/: README.md  cspell.json  index.md  requirements-docs.in  requirements-docs.txt
docs/ai/: index.md
docs/concepts/: architecture.md  index.md  multi-account.md
docs/getting-started/: bootstrapping.md  index.md  installation.md  quick-start.md
docs/guides/: index.md  local-deployments.md  module-development.md  project-development.md  remote-deployments.md
docs/modules/: index.md
docs/modules/aiops-modules/: index.md  index.md_with_links
docs/modules/aiops-modules/agents/: eks-strands-agents-demo.md  index.md
docs/modules/aiops-modules/eks/: index.md  ray-cluster.md  ray-image.md  ray-operator.md  ray-orchestrator.md
docs/modules/aiops-modules/examples/: airflow-dags.md  event-bus.md  index.md  mlops-stepfunctions.md  personas.md
docs/modules/aiops-modules/fmops/: bedrock-finetuning.md  index.md  (+3 more)
docs/modules/idf-modules/: index.md  index.md_with_links
docs/reference/: cli-commands.md  conventions.md  deployspec.md  faq.md  glossary.md  index.md  manifests.md
docs/sequence/: apply-deployment-workflow.md  deployment-workflow.md  index.md  module-deployment-strategies.md  ssm-metadata-tracking.md
docs/source/: architecture.md  bootstrapping.md  cli_commands.md  cli_commands.md_bak  cli_commands.rst  conf.py  cookiecutter.md  deployment_guide.md  deployspec.md  faq.md  index.rst  installation.md  local_deployments.md  manifests.md  module_best_practices.md  module_development.md  module_readme.md  modulestack.md  overview.md  parameters.md  project_development.md  project_structure.md  quick_start.md  resources.md  seedfarmer.yaml  ssm.md  upgrades.md  usage.md
docs/source/_static/: seedfarmer_diagrams.pptx
docs/static/: multi_account_setup.py  project_definition.py  role_assumption.py  seedfarmer_architecture.py  sf-diagrams.drawio  simple_account_setup.py
docs/stylesheets/: extra.css
examples/exampleproject/: seedfarmer.yaml
examples/workshop/: seedfarmer.yaml
scripts/: fix.sh  validate.sh
scripts_local/: reinstallSF.sh  updateCA_SF.sh
seedfarmer/: __init__.py  __main__.py  __metadata__.py  checksum.py  error_handler.py  input_validators.py  messages.py  output_utils.py  utils.py
seedfarmer/cli_groups/: __init__.py  _bootstrap_group.py  _bundle_group.py  _init_group.py  _list_group.py  _manage_metadata_group.py  _project_group.py  _remove_group.py  _seedkit_group.py  _store_group.py  _taint_group.py  _test_group.py
seedfarmer/commands/: __init__.py  _bootstrap_commands.py  _cdk.py  _cfn_seedkit.py  _deployment_commands.py  _deployment_local_commands.py  _deployment_test_commands.py  _module_commands.py  _network_parameter_commands.py  _parameter_commands.py  _project_policy_commands.py  _runtimes.py  _seedkit_commands.py  _stack_commands.py
seedfarmer/config/: __init__.py
seedfarmer/deployment/: codebuild_deploy.py  codebuild_local.py  codebuild_remote.py  deploy_base.py  deploy_factory.py  deploy_local.py  deploy_remote.py
seedfarmer/errors/: __init__.py  codeseeder_errors.py  seedfarmer_errors.py
seedfarmer/mgmt/: archive_support.py  build_info.py  bundle.py  bundle_support.py  deploy_utils.py  git_support.py  metadata_support.py  module_info.py  module_init.py
seedfarmer/models/: __init__.py  _base.py  _deploy_spec.py  _project_spec.py  deploy_responses.py  manifests.py
seedfarmer/models/manifests/: __init__.py  _deployment_manifest.py  _module_manifest.py
seedfarmer/models/transfer/: __init__.py  _module_deploy_object.py
seedfarmer/resources/: deployment_role.template  npm_mirror_support.py  projectpolicy.yaml  pypi_mirror_support.py  retrieve_docker_creds.py  s3_bucket.yaml  seedkit.template  toolchain_role.template
seedfarmer/services/: __init__.py  _cfn.py  _cloudwatch.py  _codebuild.py  _iam.py  _s3.py  _secrets_manager.py  _service_utils.py  _ssm.py  session_manager.py  sessionmanager.py
seedfarmer/types/: codeseeder.py  parameter_types.py
test/: pytest.ini  pytest.sh
test/unit-test/: _test_cli_helper_functions.py  _test_helper_functions.py  mock_manifests.py  test_cfn_seedkit.py  test_checksum.py  test_cli_arg.py  test_commands_bootstrap.py  test_commands_deployment.py  test_commands_module.py  test_commands_network_parameters.py  test_commands_parameters.py  test_commands_seedkit.py  test_commands_stack.py  test_deployment_role_security.py  test_empty_mirror_handling.py  test_iam_role_templates.py  test_input_validators.py  test_mgmt.py  test_mgmt_archive_support.py  test_mgmt_build_info.py  test_mgmt_bundle.py  test_mgmt_deploy_utils.py  test_mgmt_git_support.py  test_mgmt_metadata_support.py  test_mgmt_module_info.py  test_models.py  test_modules.py  test_services.py  test_session_manager.py  test_utils.py
test/unit-test/mock_data/: mock_build_info.py  mock_deployment_manifest_for_destroy.py  mock_deployment_manifest_huge.py  mock_deployment_manifest_with_prefix.py  mock_deployment_manifest_with_runtime_overrides.py  mock_deployspec.py  mock_deployspec.yaml  mock_manifests.py  mock_module_info_huge.py  seedfarmer.yaml
{{cookiecutter.project_slug}}/: .eslintignore  .eslintrc.cjs  .gitignore  .npmignore  LICENSE  README.md  app.py  capability.yaml  cdk.json  deployment.yaml  deployspec.yaml  main.tf  modulestack.template  package.json  pyproject.toml  requirements-dev.in  requirements.in  requirements.txt  seedfarmer.yaml  settings.py  setup.py  stack.py  tsconfig.json
{{cookiecutter.project_slug}}/assets/: example-input.yaml
{{cookiecutter.project_slug}}/manifests/examples/: deployment.yaml
{{cookiecutter.project_slug}}/tests/: test_app.py  test_stack.py
(+93 files in other folders)
